--- a/amogus.cabal
+++ b/amogus.cabal
@@ -36,6 +36,7 @@ executable amogus-exe
       base >=4.7 && <5
     , discord-haskell
     , random
+    , random-shuffle
     , text
     , unliftio
   default-language: Haskell2010
