--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -18,8 +18,8 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-haskell@v1
       with:
-        ghc-version: '8.10.3'
-        cabal-version: '3.2'
+        ghc-version: '9.4.8'
+        cabal-version: '3.10.3.0'
 
     - name: Cache
       uses: actions/cache@v3
@@ -40,4 +40,7 @@ jobs:
     - name: Build
       run: cabal build
     - name: Run
+      env:
+        DISCORD_SECRET: ${{ secrets.DISCORD_SECRET }}
+        DISCORD_CHANNEL_ID: ${{ secrets.DISCORD_CHANNEL_ID }}
       run: cabal run
