--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -18,8 +18,8 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-haskell@v1
       with:
-        ghc-version: '9.10.1'
-        cabal-version: '3.12.1.0'
+        ghc-version: '8.10.3'
+        cabal-version: '3.2'
 
     - name: Cache
       uses: actions/cache@v3
@@ -40,6 +40,7 @@ jobs:
     - name: Build
       run: cabal build
     - name: Run
+      environment: AUDC
       env:
         DISCORD_SECRET: ${{ secrets.DISCORD_SECRET }}
         DISCORD_CHANNEL_ID: ${{ secrets.DISCORD_CHANNEL_ID }}
