Add dependency caching

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -25,24 +25,21 @@ jobs:
         ghc-version: '8.10.3'
         cabal-version: '3.2'
 
-    - name: Cache
+    - name: Cache dependencies
+      id: cache-deps
       uses: actions/cache@v4
-      env:
-        cache-name: cache-cabal
       with:
         path: ~/.cabal
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/*.cabal') }}-${{ hashFiles('**/cabal.project') }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}-
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-
+        key: ${{ runner.os }}-primes
 
     - name: Install dependencies
       run: |
         cabal update
         cabal build --only-dependencies
+
     - name: Build
       run: cabal build
+
     - name: Run
       env:
         DISCORD_SECRET: ${{ secrets.DISCORD_SECRET }}
