--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -21,10 +21,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    # - uses: actions/setup-haskell@v1
-    #   with:
-    #     ghc-version: '8.10.3'
-    #     cabal-version: '3.2'
+    - uses: actions/setup-haskell@v1
+      with:
+        ghc-version: '8.10.3'
+        cabal-version: '3.2'
 
     - name: Cache dependencies
       id: cache-deps
