--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -30,7 +30,7 @@ jobs:
       id: cache-deps
       uses: actions/cache@v4
       with:
-        path: dist-newstyle
+        path: ${{ env.CABAL_DIR }}
         key: ${{ runner.os }}-primes
 
     - name: Install dependencies
